--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,23 @@
         android:theme="@style/Theme.Couriez"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SettingsActivity.SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
+        <activity
+            android:name=".NewOrderActive.NewOrderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpActivity.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignInActivity.SignInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OnboardActivity.OnboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
